# embassy_ipcc_extension

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
app/: Cargo.toml  memory.x
app/src/: gatt.rs  helpers.rs  main.rs  utils.rs
crates/embassy_extension/: Cargo.toml
crates/embassy_extension/src/: ble.rs  hci.rs  ipcc.rs  lib.rs  pwr.rs  tl_mbox.rs  unsafe_linked_list.rs
crates/embassy_extension/src/hci/: opcode.rs
crates/embassy_extension/src/hci/command/: gap.rs  gatt.rs  hal.rs  l2cap.rs
crates/embassy_extension/src/hci/event/: command.rs  mod.rs
crates/embassy_extension/src/tl_mbox/: ble.rs  channels.rs  cmd.rs  consts.rs  evt.rs  lhci.rs  mm.rs  shci.rs  sys.rs
