[package]
name = "ble_over_ipcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-time = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "defmt",
    "stm32wb55rg",
    "time-driver-any",
    "exti",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "1.0"
embedded-alloc = "0.5.0"

heapless = "0.7.16"

rf = { path = "../crates/embassy_extension" }
bbqueue = "0.5.1"
bluetooth-hci = "0.1.0"
nb = "1.1.0"
