[package]
name = "rf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "*", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "stm32wb55rg",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "unstable-traits",
] }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy" }

embedded-hal = { version = "0.2.6", features = ["unproven"] }
heapless = "0.7.16"
bit_field = "0.10.2"
bluetooth-hci = "0.1.0"
bitflags = "2.1.0"
byteorder = { version = "1.4.3", default-features = false }
stm32-device-signature = { version = "0.3.3", features = ["stm32wb5x"] }
bbqueue = "0.5.1"
nb = "1.1.0"

defmt = { version = "0.3", optional = true }
cortex-m = "0.7.7"
vcell = "0.1.3"

[features]
default = ["defmt"]
defmt = ["embassy-stm32/defmt", "dep:defmt"]
ms = []
